# arisusay

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
frames/: aris.txt  motion_a.txt  motion_b.txt  motion_c.txt  static.txt
src/: cli.rs  display.rs  frames.rs  main.rs
tools/: gen_frames.py
