[package]
name = "arisusay"
version = "1.1.0"
edition = "2021"
description = "An ASCII teabag player for Tendou Aris — like momoisay, but she teabags. Homage to 청세치/세치혀."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Klassikcat/arisusay"
keywords = ["cli", "ascii", "bluearchive", "terminal", "fun"]
categories = ["command-line-utilities"]

[[bin]]
name = "arisusay"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
lazy_static = "1"
rand = "0.9"
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = true
strip = true
